fixed menu z-index, added where clause to populating genre routes

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -863,7 +863,7 @@ section{
 	display: none;
 	background-color: #fff;
 	padding: 10px 0;
-	z-index: 2;
+	z-index: 200;
 }
 .categories-ul > li{
 	float: left;
